[fix] : add exception