@@ -28,9 +28,9 @@ public class GroupMemberService {
     public ResponseGroupMemberDTO createGroupMember(final CreateGroupMemberDTO requestDTO){
         final Group group = groupRepository.findById(requestDTO.getGroupId())
                 .orElseThrow(GroupException.NoGroupException::new);
-//        final Member member = memberRepository.findByIntraId(requestDTO.getIntraId())
-//                .orElseThrow(() -> new EntityNotFoundException("해당 멤버가 존재하지 않습니다."));
-        final Member member = memberRepository.findByIntraId(requestDTO.getIntraId()).orElseThrow();
+        final Member member = memberRepository.findByIntraId(requestDTO.getIntraId())
+                .orElseThrow(MemberException.NoMemberException::new);
+//        final Member member = memberRepository.findByIntraId(requestDTO.getIntraId()).orElseThrow();
 
         boolean isGroupMemberExists = groupMemberRepository.existsByGroupAndMember(group, member);
         if (isGroupMemberExists) {
@@ -143,7 +143,7 @@ public class GroupMemberService {
         final List<ResponseGroupMemberDTO> membersNotInGroup = defaultMembers.stream()
                 .filter(defaultMember -> groupMembers.stream()
                         .noneMatch(groupMember -> defaultMember.getMemberId().equals(groupMember.getMemberId())))
-                .collect(Collectors.toList());
+                .toList();
 
         return membersNotInGroup;
     }
